--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,7 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import './colors';
+
 
 .game-board {
   width: 50%;
@@ -10,4 +12,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 .row > * {
   border: 1px solid #fff;
   text-align: center;
+  border-color: $border-color;
+  height: 20;
+  width: 15%;
 }
