--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,6 +13,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   border: 1px solid #fff;
   text-align: center;
   border-color: $border-color;
-  height: 20;
-  width: 15%;
+  height: 150px;
+  width: 150px;
 }
